# gdm-tck

./: .gitignore  AGENTS.md  USER_GUIDE.md  pyproject.toml
config/: ci.toml  default.toml  distributed.toml  neo4j.toml
config/gdmconfig/: node1.toml  standalone.toml
docs/: deploy-guide.md  user-manual.md  环境部署参考信息.md
features/12-GDMCLI/: 01_cli_smoke.feature
features/18-Capacity/: DatabaseSizeCapacity.feature  EdgeCapacity.feature  NodeCapacity.feature  PropertyCapacity.feature
features/2-DML/: 测试点.md
features/20-LDBC/: TODO_NOTE.md
features/21-movie/: 01-create-dataset.feature  02-match-return.feature  03-where-orderby.feature  04-with-aggregation.feature  05-optional-match.feature  06-merge-set.feature
features/4-Constraint/: 01_constraint_unique_create.feature  02_constraint_unique_violation.feature  03_constraint_unique_drop.feature  04_constraint_existence_create.feature  05_constraint_existence_violation.feature  06_constraint_existence_drop.feature  07_constraint_key_create.feature  08_constraint_key_violation.feature  09_constraint_key_drop.feature  10_constraint_property_type_create.feature  11_constraint_property_type_violation.feature  12_constraint_property_type_drop.feature  13_constraint_composite_create.feature  15_constraint_composite_drop.feature  16_show_constraints.feature  17_constraint_coexistence.feature  18_constraint_idempotent.feature  19_constraint_existing_data.feature  20_constraint_error.feature  [未支持]10_constraint_property_type_create.feature  [未支持]11_constraint_property_type_violation.feature  [非法用例]14_constraint_composite_violation.feature
features/9-BackupRestore/: 测试点.md
reports/allure-report/: index.html
reports/allure-results/: 0008e42a-915b-435a-9c21-f49eb1cbfe9f-container.json  0010d812-f52e-4109-9108-c427f54c78be-result.json  0012b7d5-ed04-4ffb-8589-0ad7512d0c5a-container.json  0016705c-eb7f-4b8b-8d0c-347813bbe342-container.json  001bf551-78f2-4947-8ad7-6edd13535f43-container.json  001c4abd-2c61-4232-8acd-569832d02ade-container.json  001d5b61-a93d-4fc2-8b05-0dc7cf870414-container.json  (+26927 more)
scripts/: generate_report.sh  run_suite.sh
scripts/deploy/: check_health.sh  deploy.sh  (+1 more)
steps/: __init__.py  conftest.py  step_admin_exec.py  step_cli_exec.py  step_error_assert.py  step_graph_init.py  step_parameters.py  step_plan_assert.py  step_query_exec.py  step_result_assert.py  step_schema_assert.py  step_side_effects.py
tests/: conftest.py
(+4788 files in other folders)
